# nmd-sa-heatherw

./: .gitignore  DISCUSSION.md  Makefile  README.md  env.example  pyproject.toml  sa_assessment_cf_template.yaml
config/: logging.ini
data/: 1040.json  1099-misc.json  README.md  schedule-c.json  w4.json  w9.json
docker/: .dockerignore  Dockerfile  docker-compose.yml
infrastructure/live/candidate/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/alb/: main.tf  outputs.tf  variables.tf
infrastructure/modules/ecr/: main.tf
infrastructure/modules/ecs/: main.tf  outputs.tf  variables.tf
src/app/: dependencies.py  main.py
src/app/routes/: documents.py  health.py  search.py
src/common/: logging_config.py  settings.py
src/db/: engine.py
src/models/: database.py  schemas.py
src/services/: bedrock.py  document.py
tests/: conftest.py  test_health.py
