[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sa-assessment"
version = "0.1.0"
description = "Solutions Architect Assessment — FastAPI + Bedrock + pgvector on ECS Fargate"
requires-python = ">=3.12"
authors = [{ name = "NMD" }]
readme = "README.md"

dependencies = [
    "boto3>=1.42.35",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.40.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "moto[all]>=5.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.14",
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================================
# RUFF - Linting & Formatting
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
exclude = ["tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented code)
    "PL",  # pylint
    "RUF", # ruff-specific
]
ignore = [
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR0911", # Too many return statements
    "PLC0415", # Imports not at top of file
    "TC001",   # Move imports to TYPE_CHECKING block
    "TC002",   # Move third-party imports to TYPE_CHECKING block
    "TC003",   # Move stdlib imports to TYPE_CHECKING block
    "E501",    # Line too long
    "ERA001",  # Commented-out code
    "RUF022",  # __all__ is not sorted
    "PLW0603", # Global statement
]

fixable = [
    "RUF001", "RUF003", "UP035", "I",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ============================================================================
# MYPY - Static Type Checking
# ============================================================================
[tool.mypy]
strict = true
explicit_package_bases = true
namespace_packages = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["moto.*", "pgvector.*"]
ignore_missing_imports = true

# ============================================================================
# PYTEST - Testing
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "-ra",
]
norecursedirs = ["scripts", ".*"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
